--- a/conf/slave1/my.cnf
+++ b/conf/slave1/my.cnf
@@ -4,6 +4,6 @@
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"
 innodb_use_native_aio=0
 server-id = 2
-relay-log = /replication/mysql-bin.log
+relay-log = /var/lib/mysql/mysql-relay-bin.log
 log_bin = /var/lib/mysql/mysql-bin.log
 binlog_do_db = manyusers
